# Toalettkoder

./: .gitignore  build_and_deploy.sh  test.http
infra/: package-lock.json
infra/lib/: app-stack.ts
list-locations-v1/: Cargo.toml
list-locations-v1/src/: api_utils.rs  location.rs  main.rs
list-locations-v1/src/domain/: dynamodb_location_repository.rs  location.rs  location_repository.rs  mod.rs
list-locations-v1/src/utils/: dynamodb.rs
